<resources>
    <string name="app_name">Daily Hunt</string>
    <string name="facebook_app_id">1966287263602613</string>
    <string name="admob_app_id">ca-app-pub-6007267266282978~8999558641</string>
    <string name="twitter_consumer_key">idu8gebrlgIVRKgLd4Ph657yu</string>
    <string name="twitter_consumer_secret">2bvwMtnQJWqSUzsCXq3wVNWMHMgz30tl492jg8ompZIp27xzVP</string>

    <!-- Title -->
    <string name="topic">Topics</string>
    <string name="collection">Collections</string>
    <string name="radio">Radio</string>
    <string name="live_event">LIVE Event</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit profile</string>
    <string name="job_list">Jobs</string>
    <string name="meet_up">Meetups</string>
    <string name="ask">Ask</string>
    <string name="new_letter">NewLetters</string>



    <!-- Message -->
    <string name="retry">Tap to retry</string>
    <string name="something_wrong">Something wrong happened</string>
    <string name="error_no_network">No internet connection</string>
    <string name="error_cannot_connect_server">Unable to connect to server</string>

    <!--Explain -->
    <string name="explain_cannot_connect_server">Your local time mismatches with server</string>

    <!-- Navigation -->
    <string name="navigation_header_guest">Guest</string>
    <string name="navigation_collection">Collections</string>
    <string name="navigation_topic">Topics</string>
    <string name="navigation_radio">Radio</string>
    <string name="navigation_live">LIVE Event</string>
    <string name="navigation_jobs">Jobs</string>
    <string name="navigation_meetups">Meetups</string>
    <string name="navigation_ask">Ask</string>
    <string name="navigation_new_letter">NewLetters</string>
    <string name="navigation_settings">Settings</string>

    <!-- User Detail -->
    <string name="transition_user_background" translatable="false">transition_player_background</string>
    <string name="transition_user_avatar" translatable="false">transition_player_avatar</string>
    <string name="transition_user" translatable="false">user</string>
    <string name="transition_user_login" translatable="false">user_login</string>
    <string name="need_login">First you need to login</string>

    <!--Search -->
    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="search_hint">Discover your favorite thing</string>
    <string name="no_search_results">No results for\n“%1$s”</string>


    <!-- Product detail -->
    <string name="share">Share</string>
    <string name="get_it">Get it</string>
    <string name="view_more">Read more</string>
    <string name="vote_count">%s votes</string>
    <string name="related_products">Related products</string>
    <string name="now_playing">Now playing</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="follower">%d followers</string>
    <string name="following">%d followings</string>
    <string name="product">%d products</string>


    <!--Login -->
    <string name="login_title">Login to join the community</string>
    <string name="login_introduction">Product Hunt is a community to share and to geek out about the latest products, books, games, podcasts</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="policy_agreement_notification">By signing in you agree with terms of service</string>
    <string name="login">Login</string>

    <!--Empty -->
    <string name="empty_notification">You don\'t have any notification. ✌️</string>
    <string name="app_slogon">Best things every day</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_headline">Headline</string>


    <!-- Onboarding -->
    <string name="onboarding_first_scene">Daily hunt is the place to discover your next favorite thing</string>
    <string name="onboarding_second_scene">Discover and share new things posted and liked by the community every day</string>
    <string name="onboarding_third_scene">Have direct discussions with makers and other friendly folks</string>
    <string name="onboarding_first_scene_title">Discovery</string>
    <string name="onboarding_second_scene_title">Share</string>
    <string name="onboarding_third_scene_title">Community</string>

    <!-- Common -->
    <string name="share_chooser">Share link using</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <!--Meetup -->
    <string name="meetup_title">Product hunt meetup</string>


    <!-- Home -->
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="cannot_load">Cannot load</string>
    <string name="number_subscriber">%d subscribers</string>
    <string name="invalid_email">Email invalid</string>
    <string name="action_subscribe">Subscribe</string>

    <!-- Data saver -->
    <string name="data_saver_mode_content">No photo in data saver mode</string>
    <string name="disable_data_saver">Use mobile data to see Photos</string>
    <string name="data_saver_confirm">Are you sure to turn off Data Saver mode?</string>

    <!-- Settings -->
    <string name="settings_data_saver">Data Saver</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="cache_cleaned">%1$s cleaned</string>

    <!-- Upcoming detail -->
    <string name="top_subscribers">%1$s, %2$s, %3$s and others</string>
    <string name="more_upcoming_products">More upcoming products</string>

</resources>
