<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gradient="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.dynamitechetan.flowinggradient.FlowingGradient
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        gradient:transition_drawable="@drawable/login_gradient"
        gradient:transition_duration="@integer/gradient_transition_duration" />


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/space_medium">


        <TextView
            android:id="@+id/btLoginFacebook"
            style="@style/Widget.Hunt.HorizontalInlineActionButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_rounded_background"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/login_facebook"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/btLoginTwitter"
            style="@style/Widget.Hunt.HorizontalInlineActionButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:background="@drawable/white_border_rounded_background"
            android:drawableStart="@drawable/ic_twitter"
            android:text="@string/login_twitter"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />


    <TextView
        style="@style/TextAppearance.SmallNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/content_padding_horizontal"
        android:layout_marginEnd="@dimen/content_padding_horizontal"
        android:layout_marginStart="@dimen/content_padding_horizontal"
        android:gravity="center"
        android:text="@string/policy_agreement_notification"
        android:textColor="@color/gray_50" />

</FrameLayout>